[gd_scene load_steps=8 format=3 uid="uid://c4gtk4donm44u"]

[ext_resource type="Theme" uid="uid://cwe4xop3am2ut" path="res://scenes/theme.tres" id="1_4ytvr"]
[ext_resource type="FontFile" uid="uid://dg6iivcilg3ml" path="res://alagard.ttf" id="1_lti8b"]
[ext_resource type="Script" uid="uid://dleggkof0i8c2" path="res://Menu.gd" id="1_ouk20"]
[ext_resource type="Texture2D" uid="uid://crpexus8kvfdr" path="res://mainmenu_bg.png" id="2_con2f"]
[ext_resource type="Texture2D" uid="uid://bm7xet7yvs27m" path="res://logo.png" id="4_g3eks"]
[ext_resource type="Script" uid="uid://dvvq5xo4ejugo" path="res://scenes/fader.gd" id="6_g3eks"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ytvr"]
bg_color = Color(0.25, 0.232375, 0.2275, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 4
shadow_offset = Vector2(9, 15)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4ytvr")
script = ExtResource("1_ouk20")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 256.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.835, 0.835)
texture = ExtResource("2_con2f")

[node name="TextureRect2" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = -150.0
offset_top = -1.0
offset_right = 577.5
offset_bottom = 387.0
texture = ExtResource("4_g3eks")
expand_mode = 3

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 54.0
offset_top = 308.0
offset_right = 395.0
offset_bottom = 644.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4ytvr")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.5
offset_top = -120.0
offset_right = 144.5
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 28
alignment = 1

[node name="StartButton" type="Button" parent="Panel/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 60
text = "Start"

[node name="OptionsButton" type="Button" parent="Panel/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 60
text = "Settings"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_lti8b")
theme_override_font_sizes/font_size = 60
text = "Quit"

[node name="Fader" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("6_g3eks")

[connection signal="pressed" from="Panel/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
